--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,11 @@ nav a:hover {
   color: #b42885;
   text-decoration: underline;
 }
+
+.intro {
+  font-size: 1rem;
+}
+
+h1, h2, nav {
+font-family: 'Patua One', sans-serif;
+}
