--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ width: 100%;
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
@@ -27,6 +28,7 @@ text-align: center;
 nav {
   font-size: 1.125rem;
   font-weight: bold;
+  font-family: "Patua One", sans-serif;
 }
 
 nav ol{
@@ -45,8 +47,4 @@ nav a:hover {
 
 .intro {
   font-size: 1rem;
-}
-
-h1, h2, nav {
-font-family: 'Patua One', sans-serif;
 }
